@@ -9,6 +9,7 @@
 \alias{cellFromXY}
 \alias{cellFromLine}
 \alias{cellFromPolygon}
+\alias{fourCellsFromXY}
 
   
 \title{Get cell, row, or column number}
@@ -29,6 +30,7 @@ rowFromY(object, y)
 cellFromXY(object, xy)
 cellFromLine(object, lns)
 cellFromPolygon(object, p, weights=FALSE)
+fourCellsFromXY(object, xy, duplicates=TRUE) 
 }
 
 \arguments{
@@ -41,14 +43,18 @@ cellFromPolygon(object, p, weights=FALSE)
   \item{lns}{SpatialLines object}
   \item{p}{SpatialPolygons object}
   \item{weights}{Logical. If \code{TRUE}, the fraction of each cell that is covered is also returned}
+  \item{duplicates}{Logical. If \code{TRUE}, the same cell number can be returned twice (if the point in the middle of a division between two cells) or four times (if a point is in the center of a cell)}
 }
   
 \details{
-  \code{cellFromRowCol} returns the cell numbers obtained for each row / col number pair. In contrast, \code{cellFromRowColCombine} returns the cell numbers obtained by the combination of all row and column numbers supplied as arguments.
+\code{cellFromRowCol} returns the cell numbers obtained for each row / col number pair. In contrast, \code{cellFromRowColCombine} returns the cell numbers obtained by the combination of all row and column numbers supplied as arguments.
+  
+  
+\code{fourCellsFromXY} returns the four cells that are nearest to a point (if the point falls on the raster). Also see \code{\link{adjacent}}.
 }
 
 \value{
-row, column or cell number(s). cellFromLine and cellFromPolygon return a list. 
+vector of row, column or cell numbers. \code{cellFromLine} and \code{cellFromPolygon} return a list, \code{fourCellsFromXY} returns a matrix. 
 }
 
 \seealso{
@@ -64,15 +70,16 @@ cellFromRowCol(r, 1:2, 1:2)
 cellFromRowColCombine(r, 1:3, 1:2)
 cellFromCol(r, 1)
 cellFromRow(r, 1)
+
 colFromX(r, 0.5)
 rowFromY(r, 0.5)
-cellFromXY(r, c(0.5, 0.5))
+cellFromXY(r, cbind(c(0.5,5), c(15, 88)))
+fourCellsFromXY(r, cbind(c(0.5,5), c(15, 88)))
 
 cds1 <- rbind(c(-180,-20), c(-160,5), c(-60, 0), c(-160,-60), c(-180,-20))
 cds2 <- rbind(c(80,0), c(100,60), c(120,0), c(120,-55), c(80,0))
 pols <- SpatialPolygons(list(Polygons(list(Polygon(cds1)), 1), Polygons(list(Polygon(cds2)), 2)))
 cellFromPolygon(r, pols)
-
 }
 
 \keyword{spatial}
